--- a/server/package.json
+++ b/server/package.json
@@ -9,12 +9,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.27.2",
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "nodemon": "^2.0.19",
-    "socket.io": "^4.5.2",
-    "spotify-web-api-node": "^5.0.2"
+    "qs": "^6.11.0",
+    "socket.io": "^4.5.2"
   }
 }
